kustomize/infra/interface-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterface
metadata:
  name: interface-paco-leaf1
  labels:
    target: leaf1
spec:
  interface:
  - name: ethernet-1/49
    admin-state: enable
    description: "paco-ethernet-1/49"
    vlan-tagging: false
