kustomize/infra/interface-system.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterface
metadata:
  name: interface-paco-system
  labels:
    target: leaf-grp1
spec:
  interface:

  - name: system0
    admin-state: enable
    description: "paco-system0"



  - name: lo0
    admin-state: enable
    description: "paco-lo0"



  - name: irb0
    admin-state: enable
    description: "paco-irb0"
