kustomize/infra/protocols-bgp-defaultleaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgp
metadata:
  name: protocols-bgp-paco-defaultleaf1
  labels:
    target: leaf1
spec:
  network-instance-name: default
  bgp:
    admin-state: enable
    autonomous-system: 65002
    router-id: 100.112.100.1
    ebgp-default-policy:
      import-reject-all: true
      export-reject-all: true
    group: 
    
    - group-name: underlay
      admin-state: enable
      next-hop-self: true
      
      ipv4-unicast:
        admin-state: enable
      
      ipv6-unicast:
        admin-state: enable
      
    
    - group-name: overlay
      admin-state: enable
      next-hop-self: true
      
      evpn:
        admin-state: enable
      
    
    ipv4-unicast:
      admin-state: enable
      multipath:
        allow-multiple-as: true
        max-paths-level-1: 64
        max-paths-level-2: 64
    ipv6-unicast:
      admin-state: enable
      multipath:
        allow-multiple-as: true
        max-paths-level-1: 64
        max-paths-level-2: 64
    neighbor:
    
    - peer-address: 100.64.0.41
      peer-as: 65001
      peer-group: underlay
      
      
    
    - peer-address: 100.112.100.0
      peer-as: 65002
      peer-group: overlay
      
      local-as:
        as-number: 65002
      
      
      transport:
        local-address: 100.112.100.1
