kustomize/infra/routing-policy.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaRoutingPolicyRoutingPolicy
metadata:
  name: routing-policy
  labels:
    target: leaf-grp1
spec:
  routing-policy:
    prefix-set:
    - name: system-v4
      prefix: 
      - ip-prefix: 100.64.0.0/16
        mask-length-range: 32..32
    - name: system-v6
      prefix: 
      - ip-prefix: 100.64.0.0/16
        mask-length-range: 128..128
    policy:
    - name: export-underlay-local
      statement:
      - sequence-id: 10
        match:
          prefix-set: system-v4
        action:
          accept: {}
      - sequence-id: 20
        match:
          prefix-set: system-v6
        action:
          accept: {}
