kustomize/infra/subinterface-system0-leaf1.yaml
apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: subinterface-paco-system0-leaf1
  labels:
    target: leaf1
spec:
  interface-name: system0
  subinterface:
  - index: 0
    admin-state: enable
    description: "paco-system0-0-leaf1"
    ipv4:
      address: 
      - ip-prefix: 100.112.100.1/32
